feat(timeline): 添加工具操作反馈显示功能
- 新增工具操作反馈状态变量(lastToolActionFeedback等)
- 修复传输按钮工具提示逻辑问题
- 移除旧的操作结果显示文本，改用统一的反馈渲染方法
- 添加renderToolActionFeedback()方法用于显示操作反馈
- 重构renderFadingFeedback()为通用反馈渲染方法
- 更新自动映射和绑定映射操作以使用新的反馈机制
- 修改配置文件读取逻辑，移除冗余的null检查
- 更新应用到块轨道和自动轨道操作的反馈显示
- 优化collectAnimationIds()和collectTargetDisplays()方法的空值检查逻辑
- 调整滑